# window-cap-mcp

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: python_example.py  rust_library_example.rs
python/window_cap_mcp/: __init__.py  __main__.py  window_cap_mcp.pyi
src/: cli.rs  handler.rs  lib.rs  main.rs  models.rs  python_bindings.rs  server.rs
src/utils/: mod.rs  window_ops.rs
tests/: test_library.py
