[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "window-cap-mcp"
version = "0.1.1"
description = "A cross-platform window capture library for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["screenshot", "window-capture", "screen-capture", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]

[project.urls]
Homepage = "https://github.com/Sun-ZhenXing/window-cap-mcp"
Repository = "https://github.com/Sun-ZhenXing/window-cap-mcp"

[project.scripts]
window-cap-mcp = "window_cap_mcp.__main__:main"

[tool.maturin]
features = ["python"]
module-name = "window_cap_mcp"
python-source = "python"
bindings = "pyo3"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32"
before-build = "pip install maturin"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_17"
environment = { PKG_CONFIG_ALLOW_CROSS = "1" }

[tool.cibuildwheel.macos]
before-build = "pip install maturin && brew install pkg-config"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.13.3",
]
